--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,202 @@
-.App {
-  text-align: center;
+#root {
+  height: 100vh;
+}
+.login-page {
+  /* height: 92.54vh;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
+  /* min-width: 960px; */
+  width: 25%;
+  height: 400px;
+  min-width: 360px;
+  min-height: 350px;
+  margin-top: 7rem;
+}
+.navbar ul img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin: 0 0.5rem;
+}
+.navbar ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.navbar ul p {
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.main-content {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 2rem;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* Movie Detail page */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.movie-detail {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-evenly;
+}
+/* .video{
+  border: 2px solid blue;
+  width:40%;
+  height: 40vh;
+  padding: 1rem;
+  margin: 1rem;
+} */
+.overview {
+  width: 100%;
+  padding: 2rem;
+  display: flex;
+}
+.overview .image {
+  width: fit-content;
+  /* width: 30%; */
+  margin: 2rem;
+}
+.overview .details {
+  width: 70%;
+  margin: 2rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: lightgrey;
+  border-radius: 0.5rem;
+}
+
+.trailers {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+  padding: 0;
+}
+.trailers a {
+  margin: 0 0.5rem;
+  text-decoration: none;
+  padding: 0.5rem;
+}
+.trailers a:hover {
+  background-color: coral;
   color: white;
+  border-radius: 0.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+/* Movie Card */
+
+.card-main {
+  position: relative !important;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.card-main .card {
+  border-radius: 0.5rem !important;
+  width: 60%;
+  border: none;
+  box-shadow: 3px 3px 30px grey;
+}
+.card-main .card::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
+  opacity: 1;
+  border-radius: 0.5rem !important;
+}
+.card img {
+  border-radius: 0.5rem !important;
+}
+.card p.average {
+  position: absolute;
+  right: 5px;
+  top: 0;
+  font-weight: 900;
+  padding: 0;
+  z-index: 3;
+}
+.card p.title {
+  position: absolute;
+  bottom: 1.5rem;
+  font-weight: 900;
+  padding: 0;
+  z-index: 3;
+  padding: 0 0.5rem 0;
+  text-shadow: 3px 3px 5px black;
+  font-size: 1rem;
+  line-height: 1rem;
+}
+.card p.date {
+  position: absolute;
+  bottom: 0;
+  font-weight: 900;
+  padding: 0;
+  z-index: 3;
+  padding: 0.5rem;
+  padding-bottom: 0;
+  text-shadow: 3px 3px 3px black;
+  font-size: 0.8rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie-background {
+  width: 100%;
+  height: 100vh;
+  background-position: center;
+}
+.movie-background::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.1) 0%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
+  opacity: 1;
+  border-radius: 0.5rem !important;
+}
+.buton {
+  z-index: 2;
+  margin-top: 40vh !important;
+}
+.buton button {
+  box-shadow: 3px 3px 15px grey;
+}
+.main-page {
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.4) 100%
+  );
+}
+.label {
+  background-color: rgba(218, 206, 32, 0.655);
+  font-weight: 600;
 }
