--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,6 @@
   height: 100vh;
 }
 .login-page {
-  /* height: 92.54vh;
-  background-position: center;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center; */
-  /* min-width: 960px; */
   width: 25%;
   height: 400px;
   min-width: 360px;
@@ -55,17 +48,13 @@
   align-items: center;
   justify-content: space-evenly;
 }
-/* .video{
-  border: 2px solid blue;
-  width:40%;
-  height: 40vh;
-  padding: 1rem;
-  margin: 1rem;
-} */
+
 .overview {
   width: 100%;
   padding: 2rem;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .overview .image {
   width: fit-content;
@@ -74,6 +63,7 @@
 }
 .overview .details {
   width: 70%;
+  min-width: 325px;
   margin: 2rem;
   padding: 1rem;
   display: flex;
@@ -81,6 +71,9 @@
   justify-content: space-between;
   background-color: lightgrey;
   border-radius: 0.5rem;
+}
+.overview button {
+  min-width: 90px;
 }
 
 .trailers {
@@ -195,7 +188,6 @@
     rgba(0, 0, 0, 0) 0%,
     rgba(0, 0, 0, 0.4) 100%
   );
- 
 }
 .label {
   background-color: rgba(218, 206, 32, 0.655);
@@ -203,15 +195,26 @@
   padding: 5px;
   border-radius: 10px;
 }
-.no-content{
+.no-content {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: calc(100vh - 190px);
 }
-.header{
-  text-shadow: 3px 3px 50px #000000,
-    -2px 1px 20px #000000;
-    color: white;
+.header {
+  text-shadow: 3px 3px 50px #000000, -2px 1px 20px #000000;
+  color: white;
+}
+
+@media (max-width: 992px) {
+  .overview {
+    flex-direction: column;
+  }
+}
+@media (max-width: 576px) {
+  .overview details {
+    width: 90%;
+    margin: 1rem;
+  }
 }
